fix header category style

--- a/public/assets/scss/components/_nice-select.scss
+++ b/public/assets/scss/components/_nice-select.scss
@@ -22,7 +22,7 @@
 	padding-left: 18px;
 	padding-right: 30px;
 	position: relative;
-	text-align: left !important;
+	text-align: right !important;
 	-webkit-transition: all 0.2s ease-in-out;
 	transition: all 0.2s ease-in-out;
 	-webkit-user-select: none;
