--- a/public/assets/scss/components/_offcanvas.scss
+++ b/public/assets/scss/components/_offcanvas.scss
@@ -262,7 +262,7 @@
                     & > a{
                         & .dropdown-toggle-btn{
                             position: absolute;
-                            right: 0;
+                            left: 0;
                             top: 50%;
                             @extend %translateY1_2;
                             font-size: 16px;
@@ -271,7 +271,7 @@
                             @extend %tp-transition;
 
                             &.dropdown-opened{
-                                @include transform(translateY(-50%) rotate(90deg));
+                                @include transform(translateY(50%) rotate(90deg));
                             }
                         }
 
